# scuolaCpp

./: .clangd  .gitignore  .nvim.lua  CMakeLists.txt  README.md  newProject.py
Pointers/: clamp.cpp  clamp.hpp  fill.hpp  main.cpp  swap.cpp
Pointers_09-16/: fill.cpp  swap.hpp
Pointers_09-22/: main.cpp
Pointers_09-22/fill/: main.cpp  main.hpp
Pointers_09-22/print/: main.cpp  print.cpp  print.hpp
Pointers_09-22/swap/: main.cpp  main.hpp  swap.cpp
Pointers_09-23/: main.cpp
Struct_2025-09-29/: main.cpp
Struct_2025-10-01/: main.cpp
example/: example.cpp  example.sh
scripts/: pointers.sh  pointers_09-16.sh  pointers_09-22.sh  pointers_09-23.sh  struct_2025-09-29.sh  struct_2025-10-01.sh
